# golem

./: .babelrc  .eslintignore  .eslintrc  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc  .yarnrc.yml  Cargo.toml  LICENSE  README.md  font-preload-cache.json  gatsby-config.js  gatsby-node.js  index.html  init.sh  loadable-stats-build-javascript.json  netlify.toml  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  readme.md  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts  webpack.config.js
.svelte-kit/runtime/client/: start.js
components/: layout.tsx
crate/: Cargo.toml  README.md  automaton.rs  lib.rs  life_like.rs  rule.rs  rules.rs  ruleset.rs
crate/life_like/: mod.rs
crate/pkg/: golem.js  golem_bg.js  golem_bg.wasm  package.json
crate/ruleset/: bs.rs  bsc.rs  mod.rs
crate/src/: automaton.rs  lib.rs  rules.rs
crate/src/automaton/: mod.rs
crate/src/automaton_life_like/: mod.rs
crate/src/ruleset/: bs.rs  bsc.rs
crate/tests/: web.rs
hooks/: useClientSize.tsx
lib/: Cargo.toml
lib/src/: automaton.rs  rules.rs
pages/: _app.tsx  index.tsx
public/: index.html  manifest.json
rs/: README.md
rs/pkg/: README.md  golem.d.ts  golem_bg.d.ts  golem_bg.wasm  package.json
rs/src/automaton/: rules.rs  utils.rs
rs/tests/: web.rs
scss/: global.scss
src/: app.css  app.d.ts  app.html  bootstrap.ts  hooks.ts  html.jsx  index.js  main.rs
src.old/components/: head.jsx  index.jsx
src.old/pages/: 404.jsx  index.jsx
src/components/: App.svelte  Canvas.svelte  Cells.svelte  Options.svelte  Stats.svelte  cas-grid.js  cas-main.js  cells.jsx  golem-cells.jsx  golem-grid.js  golem-main.js  golem-options.js  golem-options.jsx  golem-stage.jsx  golem-stats.jsx  golem.rs  golemCells.jsx  golemOptions.jsx  golemStage.jsx  golemStats.jsx  golem_options.rs  head.jsx  layout.jsx  mod.rs
src/fonts/: fonts.css
src/hooks/: useClientSize.jsx
src/lib/: LoadingIcon.svelte  index.ts  pixi.ts
src/pages/: 404.jsx  index.jsx  index.ts
src/routes/: +layout.svelte  +page.svelte  App.svelte  Options.svelte  __error.svelte  __layout.svelte  index.svelte
src/scss/: style.scss
src/scss/helpers/: variables.scss
src/scss/pages/: index.scss
src/stores/: index.ts
src/styles/: global.scss  variables.scss
src/styles/variables/: _color.scss
static/fonts/: fonts.css
styles/: global.scss
styles/variables/: _color.scss  _font.scss
web/: .eslintrc.cjs  .prettierrc  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
web/src/: app.css  app.d.ts  app.html
web/src/lib/: index.ts  rules.ts
web/src/routes/: +layout.svelte  +page.svelte  App.svelte  Canvas.svelte  Controls.svelte  Options.svelte  Stats.svelte
