[package]
name = "cellular-automaton"
description = "A cellular automaton simulation library with support for WebAssembly."
version = "0.1.10"
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/tedbyron/golem"
homepage = "https://github.com/tedbyron/golem"
documentation = "https://docs.rs/cellular-automaton/"
readme = "README.md"
keywords = ["wasm", "webassembly", "game-of-life", "cellular-automaton", "cellular-automata"]
categories = ["wasm", "games"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "crate/lib.rs"

[dependencies]
console_error_panic_hook = "0.1.6"
getrandom = { version = "0.2.3", features = ["js"] }
rand = "0.8.4"
wasm-bindgen = "0.2.76"

[dev-dependencies]
wasm-bindgen-test = "0.3.26"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
# strip = "symbols"
