[package]
name = "golem"
description = "Cellular automaton simulation library."
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "crate/lib.rs"

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.3", features = ["js"] }
rand = "0.8.4"
wasm-bindgen = "0.2.78"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
# strip = "symbols"
