[package]
name = "cellular-automaton"
description = "A cellular automaton simulation library with WebAssembly as a target."
version = "0.1.0"
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/tedbyron/golem"
homepage = "https://github.com/tedbyron/golem"
documentation = "https://github.com/tedbyron/golem"
readme = "README.md"
keywords = ["wasm", "webassembly", "game-of-life", "cellular-automaton"]
categories = ["wasm", "games"]
license = "MIT"
edition = "2018"
exclude = [
    "pkg/",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0", optional = true }
getrandom = { version = "0", features = ["js"] }
rand = "0"
wasm-bindgen = "0"
wee_alloc = { version = "0", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
