[package]
name = "golem-lib"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.8", features = ["js"] }
rand = "0.8.5"
wasm-bindgen = "0.2.84"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
